syntax = "proto3";
package com.netflix.conductor.proto;

import "model/workflowtask.proto";
import "google/protobuf/struct.proto";

option java_outer_classname = "TaskPb";
option go_package = "github.com/netflix/conductor/client/gogrpc/conductor/model";

message Task {
    enum Status {
        IN_PROGRESS = 0;
        CANCELED = 1;
        FAILED = 2;
        COMPLETED = 3;
        COMPLETED_WITH_ERRORS = 4;
        SCHEDULED = 5;
        TIMED_OUT = 6;
        READY_FOR_RERUN = 7;
        SKIPPED = 8;
    }
    string task_type = 1;
    Task.Status status = 2;
    map<string, google.protobuf.Value> input_data = 3;
    string reference_task_name = 4;
    int32 retry_count = 5;
    int32 seq = 6;
    string correlation_id = 7;
    int32 poll_count = 8;
    string task_def_name = 9;
    int64 scheduled_time = 10;
    int64 start_time = 11;
    int64 end_time = 12;
    int64 update_time = 13;
    int32 start_delay_in_seconds = 14;
    string retried_task_id = 15;
    bool retried = 16;
    bool callback_from_worker = 17;
    int32 response_timeout_seconds = 18;
    string workflow_instance_id = 19;
    string workflow_type = 20;
    string task_id = 21;
    string reason_for_incompletion = 22;
    int64 callback_after_seconds = 23;
    string worker_id = 24;
    map<string, google.protobuf.Value> output_data = 25;
    WorkflowTask workflow_task = 26;
    string domain = 27;
}
